[package]
name = "aliddns"
version = "1.1.2"
authors = ["Scallop Ye <yescallop@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
curl = {version = "0.4", default-features = false}
hmac-sha1 = "0.1"
json = "0.12"
log = "0.4"
serde = {version = "1", features = ["derive"]}
toml = "0.5"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows-service = { git = "https://github.com/yescallop/windows-service-rs" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
]

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
